# High-Performance-Computing

./: README.md
hw1_soms_redacted/src/: som.cxx  som.hxx
hw1_soms_redacted/test/: CMakeLists.txt  test_get_neighbors.cxx  test_neighborhood_function.cxx
hw1_soms_redacted_bonus/__MACOSX/: ._hw1_soms_redacted
hw1_soms_redacted_bonus/__MACOSX/hw1_soms_redacted/: ._CMakeLists.txt  ._data  ._src  ._test
hw1_soms_redacted_bonus/__MACOSX/hw1_soms_redacted/data/: ._iris.csv  ._iris.names  ._wdbc.csv  ._wdbc.names
hw1_soms_redacted_bonus/__MACOSX/hw1_soms_redacted/src/: ._CMakeLists.txt  ._cell.cxx  ._cell.hxx  ._dataset.cxx  ._dataset.hxx  ._main.cxx  ._sample.cxx  ._sample.hxx  ._som.cxx  ._som.hxx
hw1_soms_redacted_bonus/__MACOSX/hw1_soms_redacted/test/: ._CMakeLists.txt  ._test_common.cxx  ._test_common.hxx  ._test_database_normalize.cxx  ._test_database_statistics.cxx  ._test_distance_function.cxx  ._test_get_bmu.cxx  ._test_get_neighbors.cxx  ._test_neighborhood_function.cxx  ._test_sample.cxx  ._test_update_cell.cxx
hw1_soms_redacted_bonus/hw1_soms_redacted/: CMakeLists.txt  README.md.txt
hw1_soms_redacted_bonus/hw1_soms_redacted/src/: CMakeLists.txt  main.cxx  sample.hxx  som.cxx  som.hxx
hw1_soms_redacted_bonus/hw1_soms_redacted/test/: test_common.cxx  test_distance_function.cxx
hw2_soms_redacted/src/: cell.cxx  cell.hxx  dataset.cxx  main.cxx  som.cxx
hw2_soms_redacted/test/: test_common.hxx  test_database_normalize.cxx  test_sample.cxx  test_update_cell.cxx
hw2_soms_redacted_bonus/src/: cell.hxx  main.cxx  sample.cxx  som.cxx  som.hxx
hw2_soms_redacted_bonus/test/: test_database_statistics.cxx  test_get_bmu.cxx
hw3_heat_diffusion/__MACOSX/: ._hw3_heat_diffusion
hw3_heat_diffusion/__MACOSX/hw3_heat_diffusion/: ._CMakeLists.txt  ._src
hw3_heat_diffusion/__MACOSX/hw3_heat_diffusion/src/: ._CMakeLists.txt  ._heat_diffusion.cxx  ._heat_diffusion_mpi.cxx
hw3_heat_diffusion/hw3_heat_diffusion/: CMakeLists.txt  mpi_practice
hw3_heat_diffusion/hw3_heat_diffusion/src/: CMakeLists.txt  Untitled-1.cpp  heat_diffusion_2d.c++  heat_diffusion_2d.cxx
hw3_heat_diffusion/src/: CMakeLists.txt  heat_diffusion.cxx  heat_diffusion_2d.cxx  heat_diffusion_mpi.cxx
hw4_pso/src/: CMakeLists.txt  dataset.cxx  dataset.hxx  mpi_asynch_mw.cxx  particle_swarm_optimization.cxx
hw4_pso/src/objectives/: CMakeLists.txt  ackley.cxx  ackley.hxx  griewank.cxx  griewank.hxx  neural_network.cxx  neural_network.hxx  objective_function.cxx  objective_function.hxx  rastrigin.cxx  rastrigin.hxx  rosenbrock.cxx  rosenbrock.hxx  sphere.cxx  sphere.hxx
hw5_nbody_simulation/__MACOSX/: ._hw5_nbody_simulation
hw5_nbody_simulation/__MACOSX/hw5_nbody_simulation/: ._CMakeLists.txt  ._nbody_gpu.cxx
hw5_nbody_simulation/hw5_nbody_simulation/: CMakeLists.txt  nbody_gpu.cxx  nbody_gpu_cuda.cu
hw6_convolution/__MACOSX/: ._hw6_convolution
hw6_convolution/__MACOSX/hw6_convolution/: ._CMakeLists.txt  ._src  ._test
hw6_convolution/__MACOSX/hw6_convolution/src/: ._CMakeLists.txt  ._convolution_2d.cu  ._convolution_2d.cuh  ._device.cxx  ._device.hxx  ._exceptions.hxx  ._tensor.cu  ._tensor.cuh
hw6_convolution/__MACOSX/hw6_convolution/test/: ._CMakeLists.txt  ._test_common.cxx  ._test_common.hxx  ._test_convolution_2d.cxx  ._test_convolution_2d_large.cu  ._test_tensor.cxx
hw6_convolution/hw6_convolution _bonus/: CMakeLists.txt
hw6_convolution/hw6_convolution _bonus/src/: CMakeLists.txt  convolution_2d.cu  device.cxx  device.hxx  tensor.cuh
hw6_convolution/hw6_convolution _bonus/test/: test_common.cxx  test_common.hxx  test_convolution_2d.cxx  test_convolution_2d_large.cu  test_tensor.cxx
hw6_convolution/hw6_convolution/src/: convolution_2d.cu  convolution_2d.cuh  exceptions.hxx  tensor.cu
hw6_convolution/hw6_convolution/test/: CMakeLists.txt
