cmake_minimum_required (VERSION 3.8)
project (DSCI_650_HW3)

SET (PLATFORM 64)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_OSX_DEPLOYMENT_TARGET 14.0)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET (CMAKE_CXX_FLAGS                " -Wall -O3 -funroll-loops -msse3 -g")
set (CMAKE_CXX_COMPILE_FLAGS "${CMAKE_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS}")
set (CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS}")

message(STATUS "${CMAKE_CXX_FLAGS}")
message(STATUS "project source dir is ${PROJECT_SOURCE_DIR}")

find_package(MPI REQUIRED)
MESSAGE(STATUS "MPI include directory: ${MPI_INCLUDE_PATH}")
MESSAGE(STATUS "MPI library: ${MPI_LIBRARY}")
MESSAGE(STATUS "MPI extra: ${MPI_EXTRA}")

find_package(SDL2 REQUIRED)
MESSAGE(STATUS "SDL2 include directories: ${SDL2_INCLUDE_DIRS}")
MESSAGE(STATUS "SDL2 library : ${SDL2_LIBRARIES}")

include_directories(${MPI_INCLUDE_PATH} ${SDL2_INCLUDE_DIRS})

add_subdirectory(src)
